--- a/bluebell/config.yaml
+++ b/bluebell/config.yaml
@@ -16,7 +16,7 @@ mysql:
   port: 13306
   user: "root"
   password: "root1234"
-  dbname: "sql_demo"
+  dbname: "bluebell"
   max_open_conns: 200
   max_idle_conns: 50
 redis:
