refactor: 更新nginx2.conf配置文件

--- a/lesson80/bluebell/Makefile
+++ b/lesson80/bluebell/Makefile
@@ -5,7 +5,7 @@ BINARY="bluebell"
 all: gotool build
 
 build:
-	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ${BINARY}
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags "-s -w" -o ./bin/${BINARY}
 
 run:
 	@go run ./main.go conf/config.yaml
