--- a/lesson80/bluebell/nginx2.conf
+++ b/lesson80/bluebell/nginx2.conf
@@ -18,18 +18,23 @@ http {
         access_log   /var/log/bluebell-access.log;
         error_log    /var/log/bluebell-error.log;
 
+		# 静态文件请求
         location ~ .*\.(gif|jpg|jpeg|png|js|css|eot|ttf|woff|svg|otf)$ {
             access_log off;
             expires    1d;
             root       /data/app/bluebell/static;
-            try_files  $uri @backend;
         }
 
+        # index.html页面请求
+        # 因为是单页面应用这里使用 try_files 处理一下，避免刷新页面时出现404的问题
         location / {
-            try_files $uri @backend;
+            root /data/app/bluebell/templates;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
-        location @backend {
+		# API请求
+        location /api/v1 {
             proxy_pass                 http://127.0.0.1:8084;
             proxy_redirect             off;
             proxy_set_header           Host             $host;
